Parquet export overview